--- a/html/studenttutorspec.html
+++ b/html/studenttutorspec.html
@@ -9,7 +9,7 @@
     <div>
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
-                <a href="#">หน้าหลัก</a>
+                <a href="javascript:loadMainPage();">หน้าหลัก</a>
             </li>
             <li class="breadcrumb-item active">ลำดับปัจจัยที่ใช้ในการคัดเลือกติวเตอร์</li>
         </ol>
