--- a/html/changepassword.html
+++ b/html/changepassword.html
@@ -9,7 +9,7 @@
     <div>
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
-                <a href="#">หน้าหลัก</a>
+                <a href="javascript:loadMainPage();">หน้าหลัก</a>
             </li>
             <li class="breadcrumb-item active">เปลี่ยนรหัสผ่าน</li>
         </ol>
@@ -67,8 +67,9 @@
 
 </body>
 <script>
-     jQuery(document).ready(function () {
+    jQuery(document).ready(function () {
         $('#txtEmail').val(_gUserEmail);
     });
 </script>
+
 </html>
