--- a/html/contact.html
+++ b/html/contact.html
@@ -8,7 +8,7 @@
     <div>
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
-                <a href="#">หน้าหลัก</a>
+                <a href="javascript:loadMainPage();">หน้าหลัก</a>
             </li>
             <li class="breadcrumb-item active">ติดต่อเรา</li>
         </ol>
@@ -17,9 +17,10 @@
     <div class="label-header">ติดต่อเรา</div>
     <br>
     <html lang="en">
-<body>
-</body>
-<script >
-  </script>
 
-</html>
+    <body>
+    </body>
+    <script>
+    </script>
+
+    </html>
