--- a/html/promote.html
+++ b/html/promote.html
@@ -8,16 +8,17 @@
     <div>
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
-                <a href="#">หน้าหลัก</a>
+                <a href="javascript:loadMainPage();">หน้าหลัก</a>
             </li>
         </ol>
     </div>
     <br>
     <br>
     <html lang="en">
-<body>
-</body>
-<script >
-  </script>
 
-</html>
+    <body>
+    </body>
+    <script>
+    </script>
+
+    </html>
