--- a/html/publishJob.html
+++ b/html/publishJob.html
@@ -10,7 +10,7 @@
     <div>
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
-                <a href="#">หน้าหลัก</a>
+                    <a href="javascript:loadMainPage();">หน้าหลัก</a>
             </li>
             <li class="breadcrumb-item active">แก้ไขข้อมูลการรับงานสอน</li>
         </ol>
