--- a/html/schedule.html
+++ b/html/schedule.html
@@ -217,7 +217,7 @@
 	<div>
 		<ol class="breadcrumb">
 			<li class="breadcrumb-item">
-				<a href="#">หน้าหลัก</a>
+					<a href="javascript:loadMainPage();">หน้าหลัก</a>
 			</li>
 			<li class="breadcrumb-item active">ตารางสอน</li>
 		</ol>
