--- a/html/studenteditclass.html
+++ b/html/studenteditclass.html
@@ -9,7 +9,7 @@
     <div>
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
-                <a href="#">หน้าหลัก</a>
+                <a href="javascript:loadMainPage();">หน้าหลัก</a>
             </li>
             <li class="breadcrumb-item active">สมัครเรียนเพิ่มเติม</li>
         </ol>
@@ -588,7 +588,7 @@
         callrequestnewclass(bodyRequest);
     }
 
-    function callrequestnewclass(bodyRequest){
+    function callrequestnewclass(bodyRequest) {
         console.log(bodyRequest);
         $.ajax({
             type: "POST",
