--- a/html/studentprofile.1.html
+++ b/html/studentprofile.1.html
@@ -9,7 +9,7 @@
     <div>
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
-                <a href="#">หน้าหลัก</a>
+                <a href="javascript:loadMainPage();">หน้าหลัก</a>
             </li>
             <li class="breadcrumb-item active">ข้อมูลส่วนตัว</li>
         </ol>
