--- a/html/tutorprofile.html
+++ b/html/tutorprofile.html
@@ -9,7 +9,7 @@
     <div>
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
-                <a href="#">หน้าหลัก</a>
+                <a href="javascript:loadMainPage();">หน้าหลัก</a>
             </li>
             <li class="breadcrumb-item active">ข้อมูลส่วนตัว</li>
         </ol>
@@ -96,7 +96,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6"></div>
-                    </div>    
+                    </div>
                     <div class="form-group required">
                         <label for="" class="col-lg-2 labelform">เอกสารสำเนาบัตรประชาชน</label>
                         <div class="col-lg-4">
@@ -223,11 +223,11 @@
         }
     });
 
-    function initialTutorProfile(){
-        
+    function initialTutorProfile() {
+
         $.ajax({
             type: "GET",
-            url: _gServiceURL + "tutor/getprofile/"+_gUser.turId,
+            url: _gServiceURL + "tutor/getprofile/" + _gUser.turId,
             contentType: "application/json; charset=utf-8",
             crossDomain: true,
             dataType: "json",
