Fix map and payment

--- a/html/main.html
+++ b/html/main.html
@@ -97,9 +97,9 @@
             _selectedRecId = id;
             console.log(_selectedRecId);
             if (type=='M') {
-                jQuery("#divMainContainer").load('./html/mergedclassdetail.html');
+                jQuery("#divMainContainer").load('./html/recmergedclassdetail.html');
             } else {
-                jQuery("#divMainContainer").load('./html/classdetail.html');
+                jQuery("#divMainContainer").load('./html/recclassdetail.html');
             }
             
         }
