--- a/index.htm
+++ b/index.htm
@@ -57,6 +57,8 @@
   <script>
     _gUserEmail = 'student1@gmail.com';  //bypass login
     _gUserType = 'student';
+    _gSelectedClsId = 0;
+    _gSelectedMerId = 0;
     _gRec = {
       recId: null,
       recType: null
