--- a/html/registerClass.html
+++ b/html/registerClass.html
@@ -342,7 +342,7 @@
                             <div class="col-lg-12">
 
                                 <form class="form-horizontal">
-                                    <div class="h2 inner-tab">ข้อมูลส่วนตัว</div>
+                                    <div class="h2 inner-tab">ข้อมูลติวเตอร์</div>
                                     <div class="form-group col-lg-12">
                                         <input type="checkbox" id="chkTutorSpec" checked>&nbsp&nbspระบุติวเตอร์</input>
                                     </div>
