--- a/html/mainStudent.html
+++ b/html/mainStudent.html
@@ -12,38 +12,260 @@
         <ul class="nav nav-tabs">
             <li class="nav-item active">
                 <a data-toggle="tab" href="#tabFindingTutor">วิชาที่อยู่ระหว่างจัดหาติวเตอร์&nbsp;&nbsp;
-                    <span class="badge badge-pill badge-danger" id="badgenum"></span>
+                    <span class="badge badge-pill badge-danger" id="stubadgenum1"></span>
                 </a>
             </li>
             <li class="nav-item">
-                <a data-toggle="tab" href="#tabCurrentCourse">คอร์สที่กำลังเรียนอยู่</a>
+                <a data-toggle="tab" href="#tabCurrentCourse">คอร์สที่จัดหาติวเตอร์ได้แล้ว&nbsp;&nbsp;
+                    <span class="badge badge-pill badge-danger" id="stubadgenum2"></span>
+                </a>
             </li>
             <li class="nav-item">
-                <a data-toggle="tab" href="#tabStudentOther">อื่นๆ</a>
+                <a data-toggle="tab" href="#tabStudentOther">อื่นๆ&nbsp;&nbsp;
+                    <span class="badge badge-pill badge-danger" id="stubadgenum3"></span>
+                </a>
             </li>
         </ul>
 
-        <div id="myTabContent" class="tab-content">
+        <div id="studnetMainContent" class="tab-content">
             <div class="tab-pane fade in active" id="tabFindingTutor">
-
+                <table id="gridTab1Student" class="table table-condensed table-hover table-striped">
+                    <thead>
+                        <tr>
+                            <th data-column-id="subject" data-width="25%">วิชาและระดับชั้น</th>
+                            <th data-column-id="time" data-width="35%">วัน เวลาและสถานที่เรียน</th>
+                            <th data-column-id="detail" data-width="15%" data-sortable="false" data-searchable="false"></th>
+                        </tr>
+                    </thead>
+                </table>
             </div>
             <div class="tab-pane fade" id="tabCurrentCourse">
-
+                <table id="gridTab2Student" class="table table-condensed table-hover table-striped">
+                    <thead>
+                        <tr>
+                            <th data-column-id="tutorname" data-width="25%">ชื่อ สกุลติวเตอร์</th>
+                            <th data-column-id="subject" data-width="25%">วิชาและระดับชั้น</th>
+                            <th data-column-id="time" data-width="35%">วัน เวลาและสถานที่เรียน</th>
+                            <th data-column-id="detail" data-width="15%" data-sortable="false" data-searchable="false"></th>
+                        </tr>
+                    </thead>
+                </table>
             </div>
             <div class="tab-pane fade" id="tabStudentOther">
-
+                <table id="gridTab3Student" class="table table-condensed table-hover table-striped">
+                    <thead>
+                        <tr>
+                            <th data-column-id="tutorname" data-width="25%">ชื่อ สกุลติวเตอร์</th>
+                            <th data-column-id="subject" data-width="25%">วิชาและระดับชั้น</th>
+                            <th data-column-id="time" data-width="35%">วัน เวลาและสถานที่เรียน</th>
+                            <th data-column-id="detail" data-width="15%" data-sortable="false" data-searchable="false"></th>
+                        </tr>
+                    </thead>
+                </table>
             </div>
         </div>
     </div>
 
     <script>
+
+        var _workStudentTabOne;
+        var _workStudentTabTwo;
+        var _workStudentTabThree;
         jQuery(document).ready(function () {
             console.log("ready!");
-            if (_gUser.turId != null) {
-                setUpTable();
+            if (_gUser.stuId != null) {
+                // setUpTable();
+                initialStudentTab1();
+                initialStudentTab2();
+                initialStudentTab3();
             }
 
         });
+
+        var gridTab1Student = $("#gridTab1Student").bootgrid({
+            navigation: 0,
+            rowSelect: true,
+            labels: {
+                noResults: 'ไม่พบรายการ'
+            }
+        }).on("loaded.rs.jquery.bootgrid", function () {
+            gridTab1Student.find("tr").on("click", function (e) {
+                console.log("click");
+            });
+            gridTab1Student.find(".command-detail").on("click", function (e) {
+                console.log("detail");
+                var i = parseInt($(this).data("row-id"));
+                loadClassDetailStudent1(_workStudentTabOne[i]);
+            });
+        });
+
+        var gridTab2Student = $("#gridTab2Student").bootgrid({
+            navigation: 0,
+            rowSelect: true,
+            labels: {
+                noResults: 'ไม่พบรายการ'
+            }
+        }).on("loaded.rs.jquery.bootgrid", function () {
+            gridTab2Student.find("tr").on("click", function (e) {
+                console.log("click");
+            });
+            gridTab2Student.find(".command-detail").on("click", function (e) {
+                console.log("detail");
+                var i = parseInt($(this).data("row-id"));
+                loadClassDetailStudent2(_workStudentTabTwo[i]);
+            });
+        });
+
+        var gridTab3Student = $("#gridTab3Student").bootgrid({
+            navigation: 0,
+            rowSelect: true,
+            labels: {
+                noResults: 'ไม่พบรายการ'
+            }
+        }).on("loaded.rs.jquery.bootgrid", function () {
+            gridTab3Student.find("tr").on("click", function (e) {
+                console.log("click");
+            });
+            gridTab3Student.find(".command-detail").on("click", function (e) {
+                console.log("detail");
+                var i = parseInt($(this).data("row-id"));
+                loadClassDetailStudent3(_workStudentTabThree[i]);
+            });
+        });
+
+
+        function appendstudenttab1(work, i) {
+            gridTab1Student.bootgrid("append", [
+
+                {
+                    "subject": work.subjectAndGroupDetailName,
+                    "time": work.recTimeLoc,
+                    "detail": "<button type='button' class='btn btn-primary btn-lg command-detail' data-row-id='" + i + "'>ดูรายละเอียด</button>"
+                }
+            ]);
+        }
+
+        function appendstudenttab2(work, i) {
+            gridTab2Student.bootgrid("append", [
+                {
+                    "tutorname": work.tutorName,
+                    "subject": work.subjectAndGroupDetailName,
+                    "time": work.recTimeLoc,
+                    "detail": "<button type='button' class='btn btn-primary btn-lg command-detail' data-row-id='" + i + "'>ดูรายละเอียด</button>"
+                }
+            ]);
+        }
+        function appendstudenttab3(work, i) {
+            gridTab3Student.bootgrid("append", [
+                {
+                    "tutorname": work.tutorName,
+                    "subject": work.subjectAndGroupDetailName,
+                    "time": work.recTimeLoc,
+                    "detail": "<button type='button' class='btn btn-primary btn-lg command-detail' data-row-id='" + i + "'>ดูรายละเอียด</button>"
+                }
+            ]);
+        }
+
+        function initialStudentTab1() {
+            $.ajax({
+                type: "GET",
+                url: _gServiceURL + "class/student/openlist/" + _gUser.stuId,
+                contentType: "application/json; charset=utf-8",
+                crossDomain: true,
+                dataType: "json",
+                success: function (data, status, jqXHR) {
+                    _workStudentTabOne = data.data.recommendTutorViews;
+                    console.log(_workStudentTabOne);
+                    if (data.data.size != 0) {
+                        $('#stubadgenum1').text(data.data.size);
+                        for (var i = 0; i < _workStudentTabOne.length; i++) {
+                            appendstudenttab1(_workStudentTabOne[i], i);
+                        }
+                    } else {
+                        $('#stubadgenum1').hide();
+                    }
+
+                },
+                error: function (jqXHR, status) {
+                    $('#stubadgenum1').hide();
+                }
+
+            });
+        }
+
+        function initialStudentTab2() {
+            $.ajax({
+                type: "GET",
+
+                url: _gServiceURL + "class/student/readylist/" + _gUser.stuId,
+                contentType: "application/json; charset=utf-8",
+                crossDomain: true,
+                dataType: "json",
+                success: function (data, status, jqXHR) {
+                    _workStudentTabTwo = data.data.recommendTutorViews;
+                    console.log(_workStudentTabTwo);
+                    if (data.data.size != 0) {
+                        $('#stubadgenum2').text(data.data.size);
+                        for (var i = 0; i < _workStudentTabTwo.length; i++) {
+                            appendstudenttab2(_workStudentTabTwo[i], i);
+                        }
+                    } else {
+                        $('#stubadgenum2').hide();
+                    }
+
+                },
+                error: function (jqXHR, status) {
+                    $('#stubadgenum2').hide();
+                }
+
+            });
+        }
+
+        function initialStudentTab3() {
+            $.ajax({
+                type: "GET",
+                url: _gServiceURL + "class/student/otherslist/" + _gUser.stuId,
+                contentType: "application/json; charset=utf-8",
+                crossDomain: true,
+                dataType: "json",
+                success: function (data, status, jqXHR) {
+                    _workStudentTabThree = data.data.recommendTutorViews;
+                    console.log(_workStudentTabThree);
+                    if (data.data.size != 0) {
+                        $('#stubadgenum3').text(data.data.size);
+                        for (var i = 0; i < _workStudentTabThree.length; i++) {
+                            appendstudenttab3(_workStudentTabThree[i], i);
+                        }
+                    } else {
+                        $('#stubadgenum3').hide();
+                    }
+
+                },
+                error: function (jqXHR, status) {
+                    $('#stubadgenum3').hide();
+                }
+
+            });
+        }
+
+
+        function loadClassDetailStudent1(result) {
+            _gSelectedClsId = result.clsId;
+            console.log(_gSelectedClsId);
+            jQuery("#divMainContainer").load('./html/classdetailstudent.html');
+        }
+
+        function loadClassDetailStudent2(result) {
+            _gSelectedClsId = result.clsId;
+            console.log(_gSelectedClsId);
+            jQuery("#divMainContainer").load('./html/classdetailstudent.html');
+        }
+        function loadClassDetailStudent3(result) {
+            _gSelectedClsId = result.clsId;
+            console.log(_gSelectedClsId);
+            jQuery("#divMainContainer").load('./html/classdetailstudent.html');
+        }
+
     </script>
 </body>
 
