--- a/html/mergedclassdetail.html
+++ b/html/mergedclassdetail.html
@@ -251,7 +251,7 @@
     function initialMapMergedData() {
         $.ajax({
             type: "GET",
-            url: _gServiceURL + "class/mergedclassdetail/" + _selectedMerId,
+            url: _gServiceURL + "class/mergedclassdetail/" + _gSelectedMerId,
             contentType: "application/json; charset=utf-8",
             crossDomain: true,
             dataType: "json",
@@ -323,7 +323,10 @@
     }
     function initmapformerged() {
 
-        _directionsDisplayMergedDetail = new google.maps.DirectionsRenderer();
+        _directionsDisplayMergedDetail = new google.maps.DirectionsRenderer({
+            preserveViewport: true
+            }
+        );
         var latLog = new google.maps.LatLng(13.736334, 100.531102);
         _mapMergedClassDetail = new google.maps.Map(document.getElementById('divMapMergedClassDetail'), {
             center: latLog,
